Update code-studio pull through to embed map levels and predict questions/answers. Also includes a fix backpack wrapped html tags (which weren’t previously being escaped properly)

--- a/lessons/static/css/commonlesson.css
+++ b/lessons/static/css/commonlesson.css
@@ -657,6 +657,25 @@ th a:link, th a:visited, th a:hover, th a:active {
     padding: 1em 0 0 .5em;
 }
 
+.level-panel .answer p {
+    padding: 0;
+    margin: 0;
+}
+
+.level-panel .answer {
+    padding: 10px;
+    margin: 10px;
+    display: inline-block;
+}
+
+.level-panel .answer-False {
+    border: 5px solid red;
+}
+
+.level-panel .answer-True {
+    border: 5px solid green;
+}
+
 /*
 .stage-level{
     float: left;
